# object-detection-monitoring

./: README.md  pyproject.toml  requriements.txt  run.py  run_basic.py
data/detections/: detection_0000.txt  detection_0001.txt  detection_0002.txt  detection_0003.txt  detection_0004.txt  detection_0005.txt  detection_0006.txt  detection_0007.txt  detection_0008.txt  detection_0009.txt  detection_0010.txt  detection_0011.txt  detection_0012.txt  detection_0013.txt  detection_0014.txt  detection_0015.txt  detection_0016.txt  detection_0017.txt  detection_0018.txt  detection_0019.txt  detection_0020.txt
data/labels/label_02/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
data/labels/label_02-bak/: 0010.txt  0013.txt  0015.txt  0019.txt  0020.txt
data/labels/label_02-others/: 0001.txt  0002.txt  0007.txt  0008.txt
src/extracotrs/: extractor.py  shuffenet.py
src/monitors/: anomaly_vmonitor.py  vmonitor.py
src/tracker/: convert.py  fhog.py  kcftracker_mod.py
