[project]
name = "temp-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
